(Works well)Add QR code sharing and import for subjects
Implements QR code generation and scanning to share and import SubjectModel data, including a custom AVFoundation-based QR scanner and payload encoding/decoding. Adds a 'Share' swipe action and menu options in EditSubjectListView, ensures teacher uniqueness on import, and updates Info.plist for camera usage. Also adds a Storage Debug view accessible from Settings for development diagnostics.

--- a/ClassOn/Info.plist
+++ b/ClassOn/Info.plist
@@ -6,5 +6,7 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera access is required to scan QR codes for importing subjects.</string>
 </dict>
 </plist>
